--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -1,121 +1,134 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8"/>
-  <title>Teacher Talk</title>
+    <meta charset="UTF-8"/>
+    <title>Teacher Talk</title>
 
-  <script th:href="@{https://use.fontawesome.com/f2bdd0ae67.js}" src="https://use.fontawesome.com/f2bdd0ae67.js"></script>
-  <link th:href="@{https://fonts.googleapis.com/css?family=Signika:300,400,700}" href="https://fonts.googleapis.com/css?family=Signika:300,400,700" rel="stylesheet"/>
-  <link rel="stylesheet" th:href="@{/css/normalize.css}" href="../static/css/normalize.css"/>
-  <link rel="stylesheet" th:href="@{/css/easy-autocomplete.css}" href="../static/css/easy-autocomplete.css" />
-  <link rel="stylesheet" th:href="@{/css/hopscotch.css}" href="../static/css/hopscotch.css" />
-  <link rel="stylesheet" th:href="@{/css/style.css}" href="../static/css/style.css"/>
+    <script th:href="@{https://use.fontawesome.com/f2bdd0ae67.js}"
+            src="https://use.fontawesome.com/f2bdd0ae67.js"></script>
+    <link th:href="@{https://fonts.googleapis.com/css?family=Signika:300,400,700}"
+          href="https://fonts.googleapis.com/css?family=Signika:300,400,700" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/css/normalize.css}" href="../static/css/normalize.css"/>
+    <link rel="stylesheet" th:href="@{/css/easy-autocomplete.css}" href="../static/css/easy-autocomplete.css"/>
+    <link rel="stylesheet" th:href="@{/css/hopscotch.css}" href="../static/css/hopscotch.css"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}" href="../static/css/style.css"/>
+    <link rel="stylesheet" th:href="@{/css/alertify.core.css}" href="../static/css/alertify.core.css"/>
+    <link rel="stylesheet" th:href="@{/css/alertify.default.css}" href="../static/css/alertify.default.css"/>
+
 
 </head>
 
 <body id="teacherSendMessage">
-  <section>
+<section>
     <header>
-      <nav>
-        <div class="header-tagline">
-          <a href="login.html">
-            <img src="../static/images/teacher-talk-logo.gif" th:src="${'/images/teacher-talk-logo.gif'}"
-               alt="teacher talk logo"/>
-          </a>
-          <h1>Teacher Talk</h1>
-          <h3>Empowering <span class="bold">Education</span> Through Better <span class="bold">Communication</span>.</h3>
-        </div>
+        <nav>
+            <div class="header-tagline">
+                <a href="login.html">
+                    <img src="../static/images/teacher-talk-logo.gif" th:src="${'/images/teacher-talk-logo.gif'}"
+                         alt="teacher talk logo"/>
+                </a>
+                <h1>Teacher Talk</h1>
+                <h3>Empowering <span class="bold">Education</span> Through Better <span
+                        class="bold">Communication</span>.</h3>
+            </div>
 
-        <div class="mobile-toggle">Menu</div>
-        <ul class="menu">
+            <div class="mobile-toggle">Menu</div>
+            <ul class="menu">
 
-          <li class="student"><a href="#addStudent">Add Student</a></li>
-          <div id="addStudent">
-            <form action="#">
-              <fieldset>
+                <li class="student"><a href="#addStudent">Add Student</a></li>
+                <div id="addStudent">
+                    <form action="javascript:void(0);" method="post">
+                        <fieldset>
 
-                <legend>Student Contact</legend>
-                <div class="input-wrapper">
-                  <input type="text" id="registerFirstNameStudent" name="studentFirstName"/>
-                  <label for="registerFirstNameStudent"> Student First Name </label>
-                </div>
-                <div class="input-wrapper">
-                  <input type="text" id="registerLastNameStudent" name="studentLastName"/>
-                  <label for="registerLastNameStudent">Student Last Name </label>
+                            <legend>Student Contact</legend>
+                            <div class="input-wrapper">
+                                <input type="text" id="registerFirstNameStudent" name="studentFirstName"/>
+                                <label for="registerFirstNameStudent"> Student First Name </label>
+                            </div>
+                            <div class="input-wrapper">
+                                <input type="text" id="registerLastNameStudent" name="studentLastName"/>
+                                <label for="registerLastNameStudent">Student Last Name </label>
+                            </div>
+
+                            <legend>Parent Contact</legend>
+                            <div class="input-wrapper">
+                                <input type="text" id="registerFirstNameParent" name="parentFirstName"/>
+                                <label for="registerFirstNameParent">Parent First Name </label>
+                            </div>
+                            <div class="input-wrapper">
+                                <input type="text" id="registerLastNameParent" name="parentLastName"/>
+                                <label for="registerLastNameParent">Parent Last Name </label>
+                            </div>
+                            <div class="input-wrapper">
+                                <input type="email" id="registerParentEmail" name="parentEmail"/>
+                                <label for="registerParentEmail">Parent Email </label>
+                            </div>
+
+                        </fieldset>
+                        <button id="teacherSubmitStudentButton" type="submit" class="update">Save</button>
+                    </form>
                 </div>
 
-                <legend>Parent Contact</legend>
-                <div class="input-wrapper">
-                  <input type="text" id="registerFirstNameParent" name="parentFirstName" />
-                  <label for="registerFirstNameParent">Parent First Name </label>
-                </div>
-                <div class="input-wrapper">
-                  <input type="text" id="registerLastNameParent" name="parentLastName"/>
-                  <label for="registerLastNameParent">Parent Last Name </label>
-                </div>
-                <div class="input-wrapper">
-                  <input type="email" id="registerParentEmail" name="parentEmail"/>
-                  <label for="registerParentEmail">Parent Email </label>
-                </div>
+                <li><a href="#">Add Template</a></li>
 
-              </fieldset>
-              <button type="submit" class="update">Save</button>
-            </form>
-          </div>
+                <li class="history"><a href="messageLog.html" th:href="@{/messageLog}">History Log</a></li>
 
-          <li><a href="#">Add Template</a></li>
-
-          <li class="history"><a href="messageLog.html" th:href="@{/messageLog}">History Log</a></li>
-
-          <li class="profile"><a href="#updateProfile">Profile</a></li>
-          <div id="updateProfile">
-            <form action="teacherSignUp.html" th:action="@{/teacherSignUp}">
-              <fieldset>
-                <div class="input-wrapper">
-                  <input type="text" id="registerFirstName" name="registerFirstName" th:value="${teacher.getFirstName()}"/>
-                  <label id="firstNameLabel" for="registerFirstName">First Name </label>
+                <li class="profile"><a href="#updateProfile">Profile</a></li>
+                <div id="updateProfile">
+                    <form action="teacherSignUp.html" th:action="@{/teacherSignUp}">
+                        <fieldset>
+                            <div class="input-wrapper">
+                                <input type="text" id="registerFirstName" name="registerFirstName"
+                                       th:value="${teacher.getFirstName()}"/>
+                                <label id="firstNameLabel" for="registerFirstName">First Name </label>
+                            </div>
+                            <div class="input-wrapper">
+                                <input type="text" id="registerLastName" name="registerLastName"
+                                       th:value="${teacher.getLastName()}"/>
+                                <label id="lastNameLabel" for="registerLastName">Last Name </label>
+                            </div>
+                            <div class="input-wrapper">
+                                <input type="email" id="registerEmail" name="registerEmail"
+                                       th:value="${teacher.getEmail()}"/>
+                                <label id="emailLabel" for="registerEmail">Email </label>
+                            </div>
+                            <div class="input-wrapper">
+                                <input type="password" id="registerPassword" name="registerPassword"
+                                       th:value="${teacher.getPassword()}"/>
+                                <label id="passwordLabel" for="registerPassword">Password </label>
+                            </div>
+                            <div class="input-wrapper">
+                                <input type="number" id="registerPhoneNumber" name="registerPhoneNumber"
+                                       th:value="${teacher.getPhoneNumber()}"/>
+                                <label id="phoneNumberLabel" for="registerPhoneNumber">Phone Number </label>
+                            </div>
+                            <div class="input-wrapper">
+                                <input type="text" id="registerSchoolName" name="registerSchoolName"
+                                       th:value="${teacher.getSchoolName()}"/>
+                                <label id="schoolNameLabel" for="registerSchoolName">School Name</label>
+                            </div>
+                            <div class="input-wrapper">
+                                <input type="text" id="registerSubjectArea" name="registerSubjectArea"
+                                       th:value="${teacher.getSubjectArea()}"/>
+                                <label id="subjectAreaLabel" for="registerSubjectArea">Subject Area </label>
+                            </div>
+                        </fieldset>
+                        <button type="submit" class="update">Update</button>
+                    </form>
                 </div>
-                <div class="input-wrapper">
-                  <input type="text" id="registerLastName" name="registerLastName" th:value="${teacher.getLastName()}"/>
-                  <label id="lastNameLabel" for="registerLastName">Last Name </label>
-                </div>
-                <div class="input-wrapper">
-                  <input type="email" id="registerEmail" name="registerEmail" th:value="${teacher.getEmail()}"/>
-                  <label id="emailLabel" for="registerEmail">Email </label>
-                </div>
-                <div class="input-wrapper">
-                  <input type="password" id="registerPassword" name="registerPassword" th:value="${teacher.getPassword()}"/>
-                  <label id="passwordLabel" for="registerPassword">Password </label>
-                </div>
-                <div class="input-wrapper">
-                  <input type="number" id="registerPhoneNumber" name="registerPhoneNumber" th:value="${teacher.getPhoneNumber()}"/>
-                  <label id="phoneNumberLabel" for="registerPhoneNumber">Phone Number </label>
-                </div>
-                <div class="input-wrapper">
-                  <input type="text" id="registerSchoolName" name="registerSchoolName" th:value="${teacher.getSchoolName()}"/>
-                  <label id="schoolNameLabel" for="registerSchoolName">School Name</label>
-                </div>
-                <div class="input-wrapper">
-                  <input type="text" id="registerSubjectArea" name="registerSubjectArea" th:value="${teacher.getSubjectArea()}"/>
-                  <label id="subjectAreaLabel" for="registerSubjectArea">Subject Area </label>
-                </div>
-              </fieldset>
-              <button type="submit" class="update">Update</button>
-            </form>
-          </div>
-        </ul>
-      </nav>
+            </ul>
+        </nav>
     </header>
 
     <div class="message-container">
-      <button id="startTour">Start Tour</button>
-      <div class="message">
-        <div class="container-title">New Message</div>
+        <button id="startTour">Start Tour</button>
+        <div class="message">
+            <div class="container-title">New Message</div>
 
-        <div class="input-wrapper">
-          <input type="text" id="student" name="student" Placeholder="Student" />
-          <!-- <label for="student">Students Name</label> -->
-        </div>
+            <div class="input-wrapper">
+                <input type="text" id="student" name="student" Placeholder="Student"/>
+                <!-- <label for="student">Students Name</label> -->
+            </div>
 
             <div id="studentNameArea"></div>
 
@@ -151,6 +164,8 @@
 <script src="../static/js/menu.js" th:src="@{/js/menu.js}"></script>
 <script th:src="@{/js/hopscotch.js}" src="../static/js/hopscotch.js"></script>
 <script th:src="@{/js/tour.js}" src="../static/js/tour.js"></script>
+<script th:src="@{/js/alertify.js}" src="../static/js/alertify.js"></script>
+<script th:src="@{/js/teacherAddStudent.js}" src="../static/js/teacherAddStudent.js"></script>
 
 </body>
 </html>
