--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -5,7 +5,7 @@
     <title>Teacher Talk</title>
 
     <script th:href="@{https://use.fontawesome.com/f2bdd0ae67.js}"
-            src="https://use.fontawesome.com/f2bdd0ae67.js"></script>
+            href="https://use.fontawesome.com/f2bdd0ae67.js"></script>
     <link th:href="@{https://fonts.googleapis.com/css?family=Signika:300,400,700}"
           href="https://fonts.googleapis.com/css?family=Signika:300,400,700" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/css/normalize.css}" href="../static/css/normalize.css"/>
@@ -23,7 +23,7 @@
     <header>
         <nav>
             <div class="header-tagline">
-                <a href="login.html">
+                <a href="login.html" th:href="@{/}">
                     <img src="../static/images/teacher-talk-logo.gif" th:src="${'/images/teacher-talk-logo.gif'}"
                          alt="teacher talk logo"/>
                 </a>
