fixed teacherSignUp html content

--- a/src/main/resources/templates/teacherSignUp.html
+++ b/src/main/resources/templates/teacherSignUp.html
@@ -24,11 +24,11 @@
         </div>
         <div class="question">
           <h3>How does it work?</h3>
-          <p>Teacher talk is easy to use. It allows parents to sign up and manage their best contact information. Teachers are present with a familiar email-like view where they can simply select students, their message and hit send. Teacher talk takes care of the rest</p>
+          <p>Teacher Talk is easy to use. It allows parents to sign up and manage their best contact information. Teachers are presented with a familiar email-like view where they can simply select students, a templated message and send. Teacher talk takes care of the rest.</p>
         </div>
         <div class="question">
           <h3>Can I make my own message template?</h3>
-          <p>Yes! While Teacher Talk comes with a variety of useful message templates it is easy to add your own message templates at any time</p>
+          <p>Yes! While Teacher Talk comes with a variety of useful message templates, it is quite simple to add custom message templates at any time.</p>
         </div>
       </div>
     </div>
