--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -3,6 +3,7 @@
 $primary:#00b074; //green
 $secondary:#e88510; //orange
 $header: #faf0a1; //yellow
+$red: #9b1c1f; //red
 $accent:#ececec; //off white for background
 
 @import "partials/header";
