--- a/src/main/resources/static/css/partials/_header.scss
+++ b/src/main/resources/static/css/partials/_header.scss
@@ -21,9 +21,9 @@ header {
 
 .mobile-toggle {
   display: none;
-  padding: 10px 0;
+  // padding: 10px 0;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 700;
   cursor: pointer;
 }
@@ -55,7 +55,7 @@ nav {
 }
 
 // Header Toggle Field Inputs
-#updateProfile, #addStudent {
+#updateProfile, #addStudent, #addTemplate {
   display:none;
   background: #fff;
   text-align: center;
@@ -66,7 +66,23 @@ nav {
   }
 }
 
-.history {
+#addTemplate {
+  form {
+    text-align: left;
+    width: 90%;
+    margin: 0px auto;
+  }
+  textarea {
+    display: block;
+    width: 100%;
+    height: 60px;
+    margin: 0 auto;
+    padding: 5px;
+    border-color: $accent;
+  }
+}
+
+.history, .student {
   position: relative;
   z-index: 100;
 }
