--- a/src/main/resources/static/css/partials/_media.scss
+++ b/src/main/resources/static/css/partials/_media.scss
@@ -13,6 +13,16 @@
     display:block;
   }
 
+  .header-tagline {
+
+    img{
+      margin: 5px 0;
+      width: 50px;
+      margin: 5px auto;
+
+    }
+  }
+
   .mobile-toggle {
     display: block;
   }
@@ -79,7 +89,7 @@
 
 @media (max-width: 585px) {
 
-  #login-page section{
+  #login-page section {
     box-shadow: none;
   }
 
@@ -145,5 +155,4 @@
       }
     }
   }
-
 }
