--- a/src/main/resources/static/css/partials/_signUpPage.scss
+++ b/src/main/resources/static/css/partials/_signUpPage.scss
@@ -84,7 +84,7 @@ select{
 .input-wrapper {
   position: relative;
   display: inline-block;
-  margin: 5px;
+  margin: 10px 5px;
 
   label {
     position:absolute;
@@ -124,22 +124,6 @@ aside {
   margin: 15px 0;
   border:3px solid $accent;
 }
-
-// aside:nth-of-type(1) {
-//   border:3px solid #9b1c1f;
-// }
-//
-// aside:nth-of-type(2) {
-//   border:3px solid #9b1c1f;
-// }
-//
-// aside:nth-of-type(3) {
-//   border:3px solid #1e429b;
-// }
-//
-// aside:nth-of-type(4) {
-//   border:3px solid #1e429b;
-// }
 
 .contactInfo {
   display:none;
