--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -15,9 +15,8 @@ header {
 
 .mobile-toggle {
   display: none;
-  padding: 10px 0;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 700;
   cursor: pointer; }
 
@@ -36,15 +35,27 @@ nav ul li {
   nav ul li a:hover, nav ul li a:focus {
     background: #fff; }
 
-#updateProfile, #addStudent {
+#updateProfile, #addStudent, #addTemplate {
   display: none;
   background: #fff;
   text-align: center;
   padding-bottom: 15px; }
-  #updateProfile legend, #addStudent legend {
+  #updateProfile legend, #addStudent legend, #addTemplate legend {
     margin: 10px auto; }
 
-.history {
+#addTemplate form {
+  text-align: left;
+  width: 90%;
+  margin: 0px auto; }
+#addTemplate textarea {
+  display: block;
+  width: 100%;
+  height: 60px;
+  margin: 0 auto;
+  padding: 5px;
+  border-color: #ececec; }
+
+.history, .student {
   position: relative;
   z-index: 100; }
 
@@ -69,7 +80,6 @@ nav ul li {
   position: relative; }
 
 .container-title {
-  border-top: 10px solid #00b074;
   text-align: center;
   padding: 5px 10px;
   font-weight: 700;
@@ -79,18 +89,19 @@ nav ul li {
 #startTour {
   position: absolute;
   right: -35px;
-  top: -20px;
-  min-width: 100px;
+  top: -21px;
+  min-width: 75px;
   background: #9b1c1f;
   color: #fff;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  font-weight: 500;
+  -webkit-box-shadow: 0 0px 10px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0 0px 10px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.6);
   transform: rotate(-90deg);
   transition: background 1s; }
 
 #startTour:hover {
-  background: rgba(155, 28, 31, 0.9); }
+  background: #b72f32; }
 
 #studentNameArea {
   font-size: .8rem;
@@ -100,22 +111,21 @@ nav ul li {
 .message {
   width: 90%;
   margin: 0px auto;
+  border-top: 10px solid #00b074;
+  border-bottom: 10px solid #00b074;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
-  .message .input-wrapper {
-    padding: 5px 15px; }
+  .message .message-wrapper {
+    width: 85%;
+    margin: 0 auto; }
   .message form {
-    padding: 20px 0;
-    border-bottom: 10px solid #00b074; }
-    .message form .select-style {
-      margin: 0 5px;
-      padding: 10px 15px; }
+    padding: 20px 0; }
     .message form textarea {
       font-size: .8rem;
-      width: 90%;
+      width: 100%;
       display: block;
-      margin: 0 auto 25px;
+      margin: 15px 5px 25px;
       padding: 5px;
       box-sizing: border-box;
       height: 150px;
@@ -127,7 +137,7 @@ div.hopscotch-bubble .hopscotch-bubble-close {
 
 div.hopscotch-bubble {
   background: #faf0a1;
-  border-color: #faf0a1;
+  border-color: #9b1c1f;
   font-family: 'Signika', sans-serif; }
   div.hopscotch-bubble .hopscotch-bubble-number {
     color: #333;
@@ -139,10 +149,10 @@ div.hopscotch-bubble {
     padding: 8px !important; }
 
 div.hopscotch-bubble .hopscotch-bubble-arrow-container.left .hopscotch-bubble-arrow-border {
-  border-right: 17px solid #faf0a1; }
+  border-right: 17px solid #9b1c1f; }
 
 div.hopscotch-bubble .hopscotch-bubble-arrow-container.down .hopscotch-bubble-arrow-border {
-  border-top: 17px solid #faf0a1; }
+  border-top: 17px solid #9b1c1f; }
 
 div.hopscotch-bubble .hopscotch-bubble-arrow-container.left .hopscotch-bubble-arrow {
   border-right: 17px solid #faf0a1; }
@@ -151,16 +161,16 @@ div.hopscotch-bubble .hopscotch-bubble-arrow-container.down .hopscotch-bubble-ar
   border-top: 17px solid #faf0a1; }
 
 div.hopscotch-bubble .hopscotch-nav-button.next:hover {
-  background-color: #53b98f; }
+  background: #b72f32; }
 
 div.hopscotch-bubble .hopscotch-nav-button.next {
   min-width: 100px;
   margin: 5px auto;
-  border-color: #00b074;
+  border-color: #9b1c1f;
   color: #fff;
   font-size: 1rem;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.35);
-  background-color: #00b074; }
+  background-color: #9b1c1f; }
 
 #login-page section {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -324,7 +334,7 @@ select {
 .input-wrapper {
   position: relative;
   display: inline-block;
-  margin: 5px; }
+  margin: 10px 5px; }
   .input-wrapper label {
     position: absolute;
     top: 10px;
@@ -505,6 +515,11 @@ legend {
   header {
     width: 100%;
     display: block; }
+
+  .header-tagline img {
+    margin: 5px 0;
+    width: 50px;
+    margin: 5px auto; }
 
   .mobile-toggle {
     display: block; }
