--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -22,11 +22,13 @@
             <img src="../static/images/teacher-talk-logo.gif" th:src="${'/images/teacher-talk-logo.gif'}"
                alt="teacher talk logo"/>
           </a>
-          <h1>Teacher Talk</h1>
-          <h3>Empowering <span class="bold">Education</span> Through Better <span class="bold">Communication</span>.</h3>
+          <div>
+            <h1>Teacher Talk</h1>
+            <h3>Empowering <span class="bold">Education</span> Through Better <span class="bold">Communication</span>.</h3>
+            <div class="mobile-toggle">Menu</div>
+          </div>
         </div>
 
-        <div class="mobile-toggle">Menu</div>
         <ul class="menu">
 
           <li class="student"><a href="#addStudent">Add Student</a></li>
@@ -59,11 +61,23 @@
                 </div>
 
               </fieldset>
-              <button type="submit" class="update">Update</button>
+              <button type="submit" class="update">Add</button>
             </form>
           </div>
 
-          <li><a href="#">Add Template</a></li>
+          <li class="template"><a href="#addTemplate">Add Template</a></li>
+          <div id="addTemplate">
+            <form action="" th:action="">
+              <fieldset>
+                <div class="input-wrapper">
+                  <input type="text" id="registerFirstNam" name="" th:value=""/>
+                  <label id="" for="">Subject </label>
+                </div>
+                <textarea name="messageText" id="messageTextArea">Message Goes Here</textarea>
+              </fieldset>
+              <button type="submit" class="update">Add</button>
+            </form>
+          </div>
 
           <li class="history"><a href="messageLog.html" th:href="@{/messageLog}">History Log</a></li>
 
@@ -110,38 +124,39 @@
     <div class="message-container">
       <button id="startTour">Start Tour</button>
       <div class="message">
-        <div class="container-title">New Message</div>
+        <div class="message-wrapper">
 
-        <div class="input-wrapper">
-          <input type="text" id="student" name="student" Placeholder="Student" />
-          <!-- <label for="student">Students Name</label> -->
+          <div class="container-title">New Message</div>
+          <div class="input-wrapper">
+            <input type="text" id="student" name="student" Placeholder="Student" />
+            <!-- <label for="student">Students Name</label> -->
+          </div>
+
+          <div id="studentNameArea"></div>
+
+          <form th:action="@{/sendMessage}" action="teacher.html" method="post">
+            <div id="studentIdArea"></div>
+
+            <div class="select-style">
+              <select id="messageSelect" name="message">
+                <option th:each="message: ${messages}" th:value="${message.getMessageName()}"
+                        th:text="${message.getMessageName()}"
+                        th:attr="data-message=${message.getEnglishMessage()}">Template 1
+                </option>
+                <option th:remove="all">Template 2</option>
+                <option th:remove="all">Template 3</option>
+              </select>
+            </div>
+
+            <label>
+              <textarea name="messageText" id="messageTextArea">Message Goes Here</textarea>
+            </label>
+            <button id="messageSendButton" class="send">Send Message</button>
+          </form>
         </div>
-
-            <div id="studentNameArea"></div>
-
-            <form th:action="@{/sendMessage}" action="teacher.html" method="post">
-                <div id="studentIdArea"></div>
-
-                <div class="select-style">
-                    <select id="messageSelect" name="message">
-                        <option th:each="message: ${messages}" th:value="${message.getMessageName()}"
-                                th:text="${message.getMessageName()}"
-                                th:attr="data-message=${message.getEnglishMessage()}">Template
-                            1
-                        </option>
-                        <option th:remove="all">Template 2</option>
-                        <option th:remove="all">Template 3</option>
-                    </select>
-                </div>
-
-                <label>
-                    <textarea name="messageText" id="messageTextArea">Message Goes Here</textarea>
-                </label>
-                <button id="messageSendButton" class="send">Send Message</button>
-            </form>
-        </div>
+      </div>
     </div>
-</section>
+  </section>
 
 <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}"
         src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
