changed message form action in teacher html

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -71,7 +71,7 @@
 
                 <li class="template"><a href="#addTemplate">Add Template</a></li>
                 <div id="addTemplate">
-                  <form action="" th:action="">
+                  <form action="#">
                     <fieldset>
                       <div class="input-wrapper">
                         <input type="text" id="registerFirstNam" name="" th:value=""/>
