removed extra thymeleaf value in teacher html

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -74,8 +74,8 @@
                   <form action="#">
                     <fieldset>
                       <div class="input-wrapper">
-                        <input type="text" id="registerFirstNam" name="" th:value=""/>
-                        <label id="" for="">Subject </label>
+                        <input type="text" id="registerFirstNam"/>
+                        <label>Subject </label>
                       </div>
                       <textarea name="messageText" id="messageTextArea">Message Goes Here</textarea>
                     </fieldset>
