--- a/src/main/resources/static/css/partials/_history.scss
+++ b/src/main/resources/static/css/partials/_history.scss
@@ -8,6 +8,7 @@
     max-width: 1024px;
     width: 90%;
     margin: 25px auto 3%;
+    min-height: 650px;
     padding: 25px;
     text-align: center;
 
@@ -35,7 +36,7 @@
 table {
   border-collapse: collapse;
   border:1px solid $accent;
-  width: 80%;
+  width: 90%;
   margin: 25px auto;
   line-height: 1.5;
   -webkit-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
