--- a/src/main/resources/static/css/partials/_signUpPage.scss
+++ b/src/main/resources/static/css/partials/_signUpPage.scss
@@ -91,7 +91,7 @@ select{
     top: 10px;
     left:15px;
     z-index: 5;
-    margin: 10px;
+    margin: 10px 0;
     padding: 0 2px;
     font-size: .8rem;
     font-weight: 500;
