--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -9,6 +9,7 @@
     flex-wrap: wrap;
     background: #fff;
     max-width: 1024px;
+    min-height: 650px;
     width: 90%;
     margin: 25px auto 3%;
   }
@@ -148,4 +149,15 @@ div.hopscotch-bubble .hopscotch-nav-button.next {
   font-size: 1rem;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.35);
   background-color: $red;
+}
+
+//////////////////////
+// Alertify Styles///
+////////////////////
+
+.alertify-logs {
+  background: transparent;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
