--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -68,6 +68,7 @@ nav ul li {
   flex-wrap: wrap;
   background: #fff;
   max-width: 1024px;
+  min-height: 650px;
   width: 90%;
   margin: 25px auto 3%; }
 #teacherSendMessage #messageSendButton {
@@ -171,6 +172,12 @@ div.hopscotch-bubble .hopscotch-nav-button.next {
   font-size: 1rem;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.35);
   background-color: #9b1c1f; }
+
+.alertify-logs {
+  background: transparent;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none; }
 
 #login-page section {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -340,7 +347,7 @@ select {
     top: 10px;
     left: 15px;
     z-index: 5;
-    margin: 10px;
+    margin: 10px 0;
     padding: 0 2px;
     font-size: .8rem;
     font-weight: 500;
@@ -389,6 +396,7 @@ aside {
   max-width: 1024px;
   width: 90%;
   margin: 25px auto 3%;
+  min-height: 650px;
   padding: 25px;
   text-align: center; }
   #history-log section form {
@@ -403,7 +411,7 @@ aside {
 table {
   border-collapse: collapse;
   border: 1px solid #ececec;
-  width: 80%;
+  width: 90%;
   margin: 25px auto;
   line-height: 1.5;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
