--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -15,9 +15,28 @@
     <link rel="stylesheet" th:href="@{/css/alertify.core.css}" href="../static/css/alertify.core.css"/>
     <link rel="stylesheet" th:href="@{/css/alertify.default.css}" href="../static/css/alertify.default.css"/>
 
-
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="../static/images/favicon/apple-icon-57x57.png" th:href="@{/images/favicon/apple-icon-57x57.png}" />
+    <link rel="apple-touch-icon" sizes="60x60" href="../static/images/favicon/apple-icon-60x60.png" th:href="@{/images/favicon/apple-icon-60x60.png}" />
+    <link rel="apple-touch-icon" sizes="72x72" href="../static/images/favicon/apple-icon-72x72.png" th:href="@{/images/favicon/apple-icon-72x72.png}" />
+    <link rel="apple-touch-icon" sizes="76x76" href="../static/images/favicon/apple-icon-76x76.png" th:href="@{/images/favicon/apple-icon-76x76.png}" />
+    <link rel="apple-touch-icon" sizes="114x114" href="../static/images/favicon/apple-icon-114x114.png" th:href="@{/images/favicon/apple-icon-114x114.png}"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="../static/images/favicon/apple-icon-120x120.png" th:href="@{/images/favicon/apple-icon-120x120.png}" />
+    <link rel="apple-touch-icon" sizes="144x144" href="../static/images/favicon/apple-icon-144x144.png" th:href="@{/images/favicon/apple-icon-144x144.png}"/>
+    <link rel="apple-touch-icon" sizes="152x152" href="../static/images/favicon/apple-icon-152x152.png" th:href="@{/images/favicon/apple-icon-152x152.png}"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="../static/images/favicon/apple-icon-180x180.png" th:href="@{/images/favicon/apple-icon-180x180.png}"/>
+    <link rel="icon" type="image/png" sizes="192x192"  href="../static/images/favicon/android-icon-192x192.png" th:href="@{/images/favicon/android-icon-192x192.png}"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="../static/images/favicon/favicon-32x32.png" th:href="@{/images/favicon/favicon-32x32.png}"/>
+    <link rel="icon" type="image/png" sizes="96x96" href="../static/images/favicon/favicon-96x96.png" th:href="@{/images/favicon/favicon-96x96.png}"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="../static/images/favicon/favicon-16x16.png" th:href="@{/images/favicon/favicon-16x16.png}"/>
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!-- End of Favicon Content  -->
 
 </head>
+
 <body id="teacherSendMessage">
 <section>
     <header>
@@ -40,7 +59,7 @@
                     <form action="javascript:void(0);" method="post">
                         <fieldset>
 
-                            <legend>Student Contact</legend>
+                            <!-- <legend>Student Contact</legend> -->
                             <div class="input-wrapper">
                                 <input type="text" id="registerFirstNameStudent" name="studentFirstName"/>
                                 <label for="registerFirstNameStudent"> Student First Name </label>
@@ -50,7 +69,7 @@
                                 <label for="registerLastNameStudent">Student Last Name </label>
                             </div>
 
-                            <legend>Parent Contact</legend>
+                            <!-- <legend>Parent Contact</legend> -->
                             <div class="input-wrapper">
                                 <input type="text" id="registerFirstNameParent" name="parentFirstName"/>
                                 <label for="registerFirstNameParent">Parent First Name </label>
