fixed type in script on teacher html and finished add student on teacher page

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -139,7 +139,7 @@
         <div class="message-wrapper">
           <div class="container-title">New Message</div>
           <div class="input-wrapper">
-            <input type="text" id="student" name="student" Placeholder="Student" />
+            <input type="text" name="students" id="student"/>
             <!-- <label for="student">Students Name</label> -->
           </div>
 
@@ -171,10 +171,10 @@
 
 <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}"
         src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="../static/js/teacher.js" th:src="@{/js/teacidher.js}"></script>
+<script th:src="@{/js/teacher.js}" src="../static/js/teacher.js"></script>
 <script th:src="@{/js/jquery.easy-autocomplete.js}" src="../static/js/jquery.easy-autocomplete.js"></script>
-<script src="../static/js/signup.js" th:src="@{/js/signup.js}"></script>
-<script src="../static/js/menu.js" th:src="@{/js/menu.js}"></script>
+<script th:src="@{/js/signup.js}" src="../static/js/signup.js" ></script>
+<script th:src="@{/js/menu.js}" src="../static/js/menu.js" ></script>
 <script th:src="@{/js/hopscotch.js}" src="../static/js/hopscotch.js"></script>
 <script th:src="@{/js/tour.js}" src="../static/js/tour.js"></script>
 <script th:src="@{/js/alertify.js}" src="../static/js/alertify.js"></script>
