--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -109,40 +109,40 @@
 
           <legend>Student Registration</legend>
           <div class="input-wrapper">
-            <input type="text" id="" name="" th:value="" required="required"/>
-            <label for="">First Name* </label>
+            <input type="text"  name="studentFirstName"  required="required"/>
+            <label>First Name* </label>
           </div>
           <div class="input-wrapper">
             <input type="text" id="registerPrimaryLastName" name="registerPrimaryLastName" th:value="${parent.getPrimaryLastName()}" required="required" />
-            <label for="">Last Name* </label>
+            <label>Last Name* </label>
           </div>
           <div class="input-wrapper">
-            <input type="text" id="" name="" th:value="${parent.getPassword()}" required="required"/>
-            <label for="">School* </label>
+            <input type="text"  name="studentSchool" required="required"/>
+            <label>School* </label>
           </div>
           <div class="input-wrapper">
-            <input type="text" id="" name="" th:value="${parent.getPhoneNumber()}"/>
-            <label for="">Notes </label>
+            <input type="text" name="studentNotes" />
+            <label>Notes </label>
           </div>
           <aside class="border-seperation"></aside>
 
           <div class="addContact">Add Another Student <span class="plus">+</span></div>
           <div class="contactInfo">
             <div class="input-wrapper">
-              <input type="text" id="" name="" th:value="${parent.getPrimaryFirstName()}" />
-              <label for="">First Name </label>
+              <input type="text" />
+              <label>First Name </label>
             </div>
             <div class="input-wrapper">
-              <input type="text" id="registerPrimaryLastName" name="registerPrimaryLastName" th:value="${parent.getPrimaryLastName()}" />
-              <label for="">Last Name </label>
+              <input type="text" id="registerPrimaryLastName" name="registerPrimaryLastName"  />
+              <label>Last Name </label>
             </div>
             <div class="input-wrapper">
-              <input type="text" id="" name="" th:value="${parent.getPassword()}" />
-              <label for="">School </label>
+              <input type="text"/>
+              <label>School </label>
             </div>
             <div class="input-wrapper">
-              <input type="text" id="" name="" th:value="${parent.getPhoneNumber()}"/>
-              <label for="">Notes </label>
+              <input type="text"/>
+              <label>Notes </label>
             </div>
 
             <!-- 3rd Student -->
@@ -150,20 +150,20 @@
             <div class="addContact thirdStudent">Add Another Student <span class="plus">+</span></div>
             <div class="contactInfo">
               <div class="input-wrapper">
-                <input type="text" id="" name="" th:value="${parent.getPrimaryFirstName()}" />
-                <label for="">First Name </label>
+                <input type="text"/>
+                <label>First Name </label>
               </div>
               <div class="input-wrapper">
-                <input type="text" id="registerPrimaryLastName" name="registerPrimaryLastName" th:value="${parent.getPrimaryLastName()}" />
-                <label for="">Last Name </label>
+                <input type="text" id="registerPrimaryLastName" name="registerPrimaryLastName"/>
+                <label>Last Name </label>
               </div>
               <div class="input-wrapper">
-                <input type="text" id="" name="" th:value="${parent.getPassword()}" />
-                <label for="">School </label>
+                <input type="text"  />
+                <label>School </label>
               </div>
               <div class="input-wrapper">
-                <input type="text" id="" name="" th:value="${parent.getPhoneNumber()}"/>
-                <label for="">Notes </label>
+                <input type="text"/>
+                <label>Notes </label>
               </div>
             </div>
           </div>
