changed ID on teacher message page to not match the tour ID

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -96,7 +96,7 @@
                         <input type="text" id="registerFirstNam"/>
                         <label>Subject </label>
                       </div>
-                      <textarea name="messageText" id="messageTextArea">Message Goes Here</textarea>
+                      <textarea name="messageText" id="messageTemplateArea">Message Goes Here</textarea>
                     </fieldset>
                     <button type="submit" class="update">Add</button>
                   </form>
