--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -160,9 +160,9 @@ div.hopscotch-bubble .hopscotch-nav-button.next {
 // Alertify Styles///
 ////////////////////
 
-.alertify-logs {
-  background: transparent;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-}
+// .alertify-logs {
+//   background: transparent;
+//   -webkit-box-shadow: none;
+//   -moz-box-shadow: none;
+//   box-shadow: none;
+// }
