added class to teacher message section to remove conflict with alert plugin

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -38,7 +38,7 @@
 </head>
 
 <body id="teacherSendMessage">
-<section>
+<section class="teacherSection">
     <header>
         <nav>
             <div class="header-tagline">
