--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -37,7 +37,7 @@
 #startTour{
   position: absolute;
   right: -35px;
-  top: -21px;
+  top: -25px;
   min-width: 75px;
   background: $red;
   color: #fff;
@@ -57,6 +57,20 @@
   font-size: .8rem;
   font-family: 'Signika', sans-serif;
   margin: 5px 25px;
+
+  input {
+    font-family: 'Signika', sans-serif;
+    line-height: 1.6;
+    padding: 5px;
+  }
+
+  .deletebutton {
+    font-weight: 700;
+    font-family: 'Signika', sans-serif;
+    position: relative;
+    left: -12px;
+    top: -6px;
+  }
 }
 
 .message {
