Add shadow to student after you update information

--- a/src/main/resources/static/css/partials/_signUpPage.scss
+++ b/src/main/resources/static/css/partials/_signUpPage.scss
@@ -33,14 +33,14 @@
 .faq-content {
   h3 {
     font-weight: 700;
-    padding: 15px 0 5px;
+    padding: 15px 0 3px;
     text-transform: uppercase;
   }
   p {
     font-weight: 300;
   }
   .question {
-    padding: 5px 25px 15px;
+    padding: 5px 25px;
   }
 }
 
@@ -59,6 +59,17 @@
       margin: 8px auto;
       display:block;
       font-size: 1.2rem;
+    }
+  }
+}
+
+#signUpPage{
+  .student-notes {
+    width: 85%;
+    margin: 5px auto;
+    input {
+      width: 100%;
+      box-sizing: border-box;
     }
   }
 }
