--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -120,7 +120,7 @@
             <input type="text"  name="studentSchool" required="required"/>
             <label>School* </label>
           </div>
-          <div class="input-wrapper">
+          <div class="input-wrapper student-notes">
             <input type="text" name="studentNotes" />
             <label>Notes </label>
           </div>
