--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -102,7 +102,7 @@
                   </form>
                 </div>
 
-                <li class="history"><a href="messageLog.html" th:href="@{/messageLog}">History Log</a></li>
+                <li class="history"><a href="messageLog.html" th:href="@{/messageLog}" target="_blank">History Log</a></li>
 
                 <li class="profile"><a href="#updateProfile">Profile</a></li>
                 <div id="updateProfile">
