styled alert btn

--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -174,9 +174,39 @@ div.hopscotch-bubble .hopscotch-nav-button.next {
 // Alertify Styles///
 ////////////////////
 
-// .alertify-logs {
-//   background: transparent;
-//   -webkit-box-shadow: none;
-//   -moz-box-shadow: none;
-//   box-shadow: none;
-// }
+.alertify,
+.alertify-log {
+	font-family: 'Signika', sans-serif;
+}
+
+.alertify-button-cancel,
+.alertify-button-cancel:hover,
+.alertify-button-cancel:focus {
+  background-color: #9b1c1f;
+  border: 1px solid #9b1c1f;
+}
+
+.alertify-button-ok,
+.alertify-button-ok:hover,
+.alertify-button-ok:focus {
+  background-color: #1ab174;
+  border: 1px solid #1ab174;
+}
+
+.alertify-log {
+// background: #1F1F1F;
+// background: rgba(0,0,0,.9);
+padding: 15px;
+border-radius: 0px;
+color: #FFF;
+text-shadow: none;
+}
+.alertify-log-error {
+background: #9b1c1f;
+background: rgba(155,28,31,.9);
+}
+
+.alertify-log-success {
+  background: #1ab174;
+  background: rgba(26,177,116,.9);
+}
