--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -158,7 +158,7 @@
         <div class="message-wrapper">
           <div class="container-title">New Message</div>
           <div class="input-wrapper">
-            <input type="text" name="students" id="student"/>
+            <input type="text" name="students" id="student" placeholder="Student Name"/>
             <!-- <label for="student">Students Name</label> -->
           </div>
 
