implemented add template option on teacher page

--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -45,21 +45,16 @@
       <div class="faq-content">
         <div class="question">
           <h3>What is Teacher Talk?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Teacher Talk is an app developed to empower education by streamlining the process of communication between teachers and parents.  </p>
         </div>
         <div class="question">
           <h3>Why is this useful?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+          <p>Teacher talk allows you to manage your contact information in one place for all of your students teachers. No more filling out form after form from different teachers with the same information. </p>
         </div>
         <div class="question">
           <h3>How does it work?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Once you have signed up for an account and entered your contact information your job is done. All teachers will have access to your best contact information to help keep you informed about your students. Make sure to log back and update your information whenver it changes</p>
         </div>
-        <div class="question">
-          <h3>Can I make my own message template?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="question"></div>
       </div>
     </div>
 
