--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -23,7 +23,6 @@
   background: #fff;
   width: 60%;
   margin: 50px auto;
-  position: relative;
 }
 
 .container-title {
@@ -36,8 +35,8 @@
 
 #startTour{
   position: absolute;
-  right: -35px;
-  top: -25px;
+  right: 0px;
+  top: 0px;
   min-width: 75px;
   background: $red;
   color: #fff;
@@ -57,6 +56,7 @@
   font-size: .8rem;
   font-family: 'Signika', sans-serif;
   margin: 5px 25px;
+  width: 100%;
 
   input {
     font-family: 'Signika', sans-serif;
@@ -66,6 +66,7 @@
   }
 
   .deletebutton {
+    cursor: pointer;
     font-weight: 700;
     font-family: 'Signika', sans-serif;
     position: relative;
@@ -76,6 +77,7 @@
 }
 
 .message {
+  position: relative;
   width: 90%;
   margin: 0px auto;
   border-top: 10px solid $primary;
@@ -94,7 +96,7 @@
   }
 
   form {
-    padding: 20px 0;
+    padding: 0 0 20px;
 
     textarea {
       font-family: 'Signika', sans-serif;
